bugs: fixing visual clipping issue with header text on certain browsers, and fixing link paths in intro paragraph

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -74,7 +74,7 @@ a:hover {
 }
 
 .content {
-  max-width: 500px;
+  max-width: 550px;
 }
 
 .page-header {
